--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>RakuKart</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -22,7 +22,7 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="cart.html"><i class="fa-light fa-bag-shopping"></i></a></li>
+                    <li><a href="cart.html">Cart<i class="fa-light fa-bag-shopping"></i></a></li>
                 </ul>
             </div>
         </section>
