--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="cart.html"><i class="fal fa-shopping-bag"></i></a></li>
+                    <li id="lg-bag"><a href="cart.html"><i class="fal fa-shopping-bag"></i></a></li>
+                    <a href="#" id="close"><i class="far fa-times"></i></a>
                 </ul>
+            </div>
+            <div id="mobile">
+                <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+                <i id="bar" class="fas fa-outdent"></i>
             </div>
         </section>
 
@@ -37,27 +42,27 @@
 
         <section id="feature" class="section-p1">
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f1.png">
                 <h6>Free Shipping</h6>
             </div>
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f2.png">
                 <h6>Online Order</h6>
             </div>
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f3.png">
                 <h6>Save Money</h6>
             </div>
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f4.png">
                 <h6>Promotions</h6>
             </div>
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f5.png">
                 <h6>Happy Sell</h6>
             </div>
             <div class="fe-box">
-                <img src="img/features/internet.png">
+                <img src="img/features/f6.png">
                 <h6>24/7 Support</h6>
             </div> 
         </section>
@@ -67,7 +72,7 @@
             <p>Summer Collection New Modern Design</p>
             <div class="pro-container">
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -83,7 +88,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f2.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -99,7 +104,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f3.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -115,7 +120,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f4.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -131,7 +136,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f5.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -147,7 +152,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f6.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -163,7 +168,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f7.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -179,7 +184,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/f8.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -208,7 +213,7 @@
             <p>Summer Collection New Modern Design</p>
             <div class="pro-container">
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n1.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -224,7 +229,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n2.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -240,7 +245,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n3.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -256,7 +261,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n4.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -272,7 +277,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n5.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -288,7 +293,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n6.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -304,7 +309,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n7.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -320,7 +325,7 @@
                     <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
                 </div>
                 <div class="pro">
-                    <img src="img/products/p1.jpeg" alt="">
+                    <img src="img/products/n8.jpg" alt="">
                     <div class="des">
                         <span>adidas</span>
                         <h5>Cartoon Astronaut T-Shirts</h5>
@@ -420,11 +425,11 @@
                 <h4>Install App</h4>
                 <p>From App Store or Google Play Store</p>
                 <div class="row">
-                    <img src="img/pay/app.png" alt="">
-                    <img src="img/pay/play.png" alt="">
+                    <img src="img/pay/app.jpg" alt="">
+                    <img src="img/pay/play.jpg" alt="">
                 </div>
                 <p>Secured Payment Gateways </p>
-                <img src="img/pay/pay.jpg" alt="">
+                <img src="img/pay/pay.png" alt="">
             </div>
 
             <div class="copyright">
