--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </div>
 
             <div class="copyright">
-                <p><strong>&#169;</strong> 2022, RakuKart</p>
+                <p><strong>&#169;</strong> 2022, Ru-Kart</p>
             </div>
         </footer>
 
