--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             <img src="img/about/a6.jpg" alt="">
             <div>
                 <h2>Who we are?</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, ipsum ducimus? Dolor, laudantium quisquam. Deleniti nam amet quam possimus, reiciendis, incidunt dignissimos eaque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim quisquam iste incidunt mollitia possimus, nemo similique expedita animi itaque nulla facere eligendi labore quas ratione ducimus velit quos vero deserunt.</p>
 
                 <abbr title="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae, error nemo, nulla.</abbr>
 
