--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
                 <br><br>
 
-                <marquee bgcolor="green" loop="-1" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente perspiciatis saepe expedita culpa. Iure quam qui nemo, ratione atque ab nesciunt labore.</marquee>
+                <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente perspiciatis saepe expedita culpa. Iure quam qui nemo, ratione atque ab nesciunt labore.</marquee>
             </div>
         </section>
 
